<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/_12sdp"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/rcvAccount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:weightSum="3">

            <TextView
                android:id="@+id/btn_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/detail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/btn_auth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/auth"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/btn_appove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/approve"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:weightSum="3">

            <TextView
                android:id="@+id/btn_classify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/classify"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/delete"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/btn_loked"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_item_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/locked"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>