<?xml version="1.0" encoding="utf-8"?>
<doan.npnm.sharerecipe.lib.widget.CornerConstrainLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    app:cornerRadius="@dimen/_2sdp"
    android:padding="@dimen/_1sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp">

                    <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cornerRadius="0dp"
                        app:strokeColor="#ccc"
                        app:strokeWidth="1sp">

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_52sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="STT"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_136sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/recipe_id"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_252sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_137sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/auth_id"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_101sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/ingredients"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_101sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/directions"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/preparation_time"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_101sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/cooking_time"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_151sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/level"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_101sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/view"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_101sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/love"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_102sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/share"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/init_time"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_151sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/status"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>


                        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

                            android:layout_width="@dimen/_151sdp"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_4sdp"
                            app:cornerRadius="0dp"
                            app:strokeColor="#ccc"
                            app:strokeWidth="1sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/manager"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>


                    </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

                </TableRow>

            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

    <ProgressBar

        android:id="@+id/progressLoad"
        android:progressTint="@color/appcolor"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</doan.npnm.sharerecipe.lib.widget.CornerConstrainLayout>















































































