<?xml version="1.0" encoding="utf-8" ?>
<TableRow android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_1sdp"
    android:layout_marginTop="@dimen/_1sdp"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cornerRadius="0dp"
        app:strokeColor="#ccc"
        app:strokeWidth="1sp">

        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

            android:layout_height="wrap_content"
            android:layout_width="@dimen/_52sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:cornerRadius="0dp"
            app:strokeColor="#ccc"
            app:strokeWidth="1sp">

            <TextView
                android:id="@+id/txtCount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="STT"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

            android:layout_height="wrap_content"
            android:layout_width="@dimen/_136sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:cornerRadius="0dp"
            app:strokeColor="#ccc"
            app:strokeWidth="1sp">

            <TextView
                android:id="@+id/txtUserID"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/recipe_id"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

            android:layout_height="wrap_content"
            android:layout_width="@dimen/_252sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:cornerRadius="0dp"
            app:strokeColor="#ccc"
            app:strokeWidth="1sp">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

            android:layout_height="wrap_content"
            android:layout_width="@dimen/_137sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:cornerRadius="0dp"
            app:strokeColor="#ccc"
            app:strokeWidth="1sp">

            <TextView
                android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/auth_id"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

        <doan.npnm.sharerecipe.lib.widget.CornerLinearLayout

            android:layout_height="wrap_content"
            android:layout_width="@dimen/_200sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:cornerRadius="0dp"
            app:strokeColor="#ccc"
            app:strokeWidth="1sp">

            <TextView
                android:id="@+id/txtContent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

    </doan.npnm.sharerecipe.lib.widget.CornerLinearLayout>

</TableRow>
   
   